# python-gitlab-artifacts

./: LICENSE  README.md  pyproject.toml  requirements.txt
gitlab_artifacts/: __init__.py  __main__.py  _version.py  cli.py  client.py  downloader.py  exceptions.py  finder.py  tools.py
