[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-gitlab-artifacts"
description = "Tool for downloading artifacts"
dynamic = ["version"]
authors = [
  {name = "Efrain Calderon", email = "efrain.calderon.estrada@gmail.com"},
]
maintainers = [
  {name = "Efrain Calderon", email = "efrain.calderon.estrada@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["artifacts", "CI", "CD", "gitlab", "pipeline"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Artifacts",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
]

requires-python = ">=3.10"
dependencies = [
  "packaging>=20",
  "setuptools",
  "python-gitlab==4.4",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "rich",
  'typing-extensions; python_version < "3.11"',
  "wheel",
]

[project.urls]
repository = "https://github.com/efra-mx/python-gitlab-artifacts/"

[project.scripts]
gitlab-artifacts = "gitlab_artifacts.cli:main"

[tool.setuptools.dynamic]
version = { attr = "gitlab_artifacts._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs*", "tests*"]

[tool.semantic_release]
branch = "main"
build_command = """
    python -m pip install build~=0.10.0
    python -m build .
"""

version_variables = [
    "gitlab_artifacts/_version.py:__version__",
]
commit_message = "chore: release v{version}"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"

[tool.setuptools_scm]
version_file = "gitlab_artifacts/_version.py"
